tests/typescript/pos/proto/proto-lookup8.ts

/*@ foo :: () => { string | true} */
function foo() {
  return "foo".charAt(0);
}

